# BedrockMap

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  asynclevelloader.cpp  asynclevelloader.h  chunkeditorwidget.cpp  chunkeditorwidget.h  chunkeditorwidget.ui  chunkpos.cpp  chunkpos.h  chunksectionwidget.cpp  chunksectionwidget.h  config.cpp  config.h  config.json  icon.qrc  icon.rc  iconmanager.cpp  iconmanager.h  lrucache.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapitemeditor.cpp  mapitemeditor.h  mapitemeditor.ui  mapwidget.cpp  mapwidget.h  msg.cpp  msg.h  nbtpalettewidget.cpp  nbtpalettewidget.h  nbtpalettewidget.ui  (+8 more)
.build/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
.build/.cmake/api/v1/reply/: cache-v2-24104c44d3ac0cfbd43d.json  cmakeFiles-v1-1efcdfd92dac33252142.json  codemodel-v2-334559fa75ee88d98802.json  index-2023-08-18T08-27-33-0805.json  target-BedrockMap-Debug-b00b5a9eaaebb7dea4c6.json  target-BedrockMap_autogen-Debug-78be0e8c39d6afa2c9be.json  toolchains-v1-ad8c352d97f4a01a63d1.json
.build/BedrockMap_autogen/: moc_predefs.h  mocs_compilation.cpp
.cache/clangd/index/: aboutdialog.cpp.9EE84F3C217E514B.idx  aboutdialog.cpp.A6417AD0EA05F344.idx  aboutdialog.h.647554503E41C9CD.idx  aboutdialog.h.EF09E74378981CAA.idx  asynclevelloader.cpp.6BE4731600D3E484.idx  asynclevelloader.cpp.F220D8A22EDADCA5.idx  asynclevelloader.h.3F24CD8564D3B3CE.idx  asynclevelloader.h.57ACEBC9F43F35EB.idx  chunkeditorwidget.cpp.29396072E9D55974.idx  chunkeditorwidget.cpp.8D4486B8B823E234.idx  chunkeditorwidget.h.6F8C799776C6DEC3.idx  chunkeditorwidget.h.88AE3F9CFB594B32.idx  chunksectionwidget.cpp.4DDE65F89C8AFB8F.idx  chunksectionwidget.cpp.519258DE4030C889.idx  chunksectionwidget.h.8043A5846B328074.idx  chunksectionwidget.h.84A35EFDB0BD9608.idx  config.cpp.07F9D78BAD4692D4.idx  config.cpp.0C19F015D92D2277.idx  config.h.0D3D187BEB906068.idx  config.h.D929AE363C6F2285.idx  iconmanager.cpp.56A987F1C8224EFE.idx  iconmanager.cpp.A063837B579EF09C.idx  iconmanager.h.310B78F6AB2E597C.idx  iconmanager.h.73971E79CA1AA4D7.idx  main.cpp.33CF909C1680453D.idx  main.cpp.89FDBF5C77E28DC5.idx  mainwindow.cpp.1D189707EA5E65BD.idx  mainwindow.cpp.2B239684433F9428.idx  mainwindow.h.6463A01D6362FAFF.idx  mainwindow.h.E17725A205193E20.idx  mapitemeditor.cpp.4E11F21894391A29.idx  mapitemeditor.cpp.F0B291FDA0232CCB.idx  mapitemeditor.h.73D04D75D5413ED4.idx  mapitemeditor.h.BEABFAB2BA9B6865.idx  mapwidget.cpp.2169DAD0C00F857E.idx  mapwidget.cpp.277CF612FB60D09E.idx  mapwidget.h.AE7D4B6D4143A7D7.idx  mapwidget.h.EF3D5F641FA3AFA8.idx  msg.cpp.498574F912746550.idx  msg.cpp.B51BA4E944F635F2.idx  (+10 more)
docs/: complie_guide.md
res/: about.md  desktop.ini  main.qss
res/entity/: desktop.ini
scripts/: build.ps1  build_run.ps1
src/: aboutdialog.cpp  asynclevelloader.cpp  chunkeditorwidget.cpp  chunkeditorwidget.ui  chunksectionwidget.cpp  config.cpp  iconmanager.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  mapitemeditor.cpp  mapwidget.cpp  msg.cpp  nbtmodifydialog.cpp  nbtmodifydialog.ui  nbtwidget.cpp  nbtwidget.ui  renderfilterdialog.cpp  renderfilterdialog.ui  resourcemanager.cpp
src/include/: aboutdialog.h  asynclevelloader.h  chunkeditorwidget.h  chunksectionwidget.h  config.h  iconmanager.h  mainwindow.h  mapitemeditor.h  mapwidget.h  msg.h  nbtmodifydialog.h  nbtwidget.h  renderfilterdialog.h  resourcemanager.h
tools/: scale_icon.py
